@@ -1,15 +1,15 @@
 Package: DoseFinding
 Type: Package
 Title: Planning and Analyzing Dose Finding Experiments
-Version: 1.0-2
-Date: 2021-10-03
+Version: 1.0-3
+Date: 2022-11-06
 Authors@R: c(
    person("Bjoern", "Bornkamp", email = "bbnkmp@mail.de", comment = c(ORCID = "0000-0002-6294-8185"), role = c("aut", "cre")),
    person("Jose", "Pinheiro", role = "aut"),
    person("Frank", "Bretz", role = "aut"),
    person("Ludger", "Sandig", role = "aut"))
-Depends: lattice, mvtnorm, R (>= 2.15.0)
-Suggests: numDeriv, Rsolnp, quadprog, parallel, multcomp, ggplot2, knitr, rmarkdown, MASS, testthat
+Depends: ggplot2, lattice, mvtnorm, R (>= 2.15.0)
+Suggests: numDeriv, Rsolnp, quadprog, parallel, multcomp, knitr, rmarkdown, MASS, testthat
 Maintainer: Bjoern Bornkamp <bbnkmp@mail.de>
 Description: The DoseFinding package provides functions for the design and analysis
 	     of dose-finding experiments (with focus on pharmaceutical Phase
