@@ -62,8 +62,11 @@
 
   \bold{Quadratic Model}
  \deqn{
-  f(d,\theta)=E_0+\beta_1d+\beta_2d^2}{f(d,theta)=E0+beta1 d+beta2 d^2.}
-
+   f(d,\theta)=E_0+\beta_1d+\beta_2d^2}{f(d,theta)=E0+beta1 d+beta2 d^2.}
+ The standardized model equation for the quadratic model is
+ \eqn{d+\delta d^2}{d+delta d^2}, with
+   \eqn{\delta=\beta_2/\beta_1}{delta=beta2/beta1}.
+   
 \bold{Linear Interpolation model}\cr
   The linInt model provides linear interpolation at the values
   defined by the nodes vector. In virtually all situations the nodes
@@ -201,41 +204,41 @@ pp. 146--171
 \examples{
 ## some quadratic example shapes
 quadModList <- Mods(quadratic = c(-0.5, -0.75, -0.85, -1), doses = c(0,1))
-plot(quadModList)
+plotMods(quadModList)
 
 ## some emax example shapes
 emaxModList <- Mods(emax = c(0.02,0.1,0.5,1), doses = c(0,1))
-plot(emaxModList)
+plotMods(emaxModList)
 ## example for gradient
 emaxGrad(dose = (0:4)/4, eMax = 1, ed50 = 0.5)
 
 ## some sigmoid emax example shapes
 sigEmaxModList <- Mods(sigEmax = rbind(c(0.05,1), c(0.15,3), c(0.4,8),
                        c(0.7,8)), doses = c(0,1))
-plot(sigEmaxModList)
+plotMods(sigEmaxModList)
 sigEmaxGrad(dose = (0:4)/4, eMax = 1, ed50 = 0.5, h = 8)
 
 ## some exponential example shapes
 expoModList <- Mods(exponential = c(0.1,0.25,0.5,2), doses=c(0,1))
-plot(expoModList)
+plotMods(expoModList)
 exponentialGrad(dose = (0:4)/4, e1 = 1, delta = 2)
 
 ## some beta model example shapes
 betaModList <- Mods(betaMod = rbind(c(1,1), c(1.5,0.75), c(0.8,2.5),
                     c(0.4,0.9)), doses=c(0,1), addArgs=list(scal = 1.2))
-plot(betaModList)
+plotMods(betaModList)
 betaModGrad(dose = (0:4)/4, eMax = 1, delta1 = 1, delta2 = 1, scal = 5)
 
 ## some logistic model example shapes
 logistModList <- Mods(logistic = rbind(c(0.5,0.05), c(0.5,0.15),
                       c(0.2,0.05), c(0.2,0.15)), doses=c(0,1))
-plot(logistModList)
+plotMods(logistModList)
 logisticGrad(dose = (0:4)/4, eMax = 1, ed50 = 0.5, delta = 0.05)
 
 ## some linInt shapes
 genModList <- Mods(linInt = rbind(c(0.5,1,1),
                       c(0,1,1), c(0,0,1)), doses=c(0,0.5,1,1.5))
-plot(genModList)
+plotMods(genModList)
 linIntGrad(dose = (0:4)/4, resp=c(0,0.5,1,1,1), nodes=(0:4)/4)
 
 }
