@@ -74,36 +74,44 @@ pp. 146--171
 ## Expected percentage of maximum effect: 0.8 is associated with
 ## dose 0.3 (d,p)=(0.3, 0.8), dose range [0,1]
 emx1 <- guesst(d=0.3, p=0.8, model="emax")
+emax(0.3,0,1,emx1)
 ## local approach
 emx2 <- guesst(d=0.3, p=0.8, model="emax", local = TRUE, Maxd = 1)
+emax(0.3,0,1,emx2)/emax(1,0,1,emx2)
 ## plot models
 models <- Mods(emax=c(emx1, emx2), doses=c(0,1))
 plot(models)
 
 ## Logistic model
-## Select two (d,p) pairs (0.2, 0.5) and (0.6, 0.95)
-lgc1 <- guesst(d = c(0.2, 0.5), p = c(0.6, 0.95), "logistic")
+## Select two (d,p) pairs (0.2, 0.6) and (0.2, 0.95)
+lgc1 <- guesst(d = c(0.2, 0.6), p = c(0.2, 0.95), "logistic")
+logistic(c(0.2,0.6), 0, 1, lgc1[1], lgc1[2])
 ## local approach
-lgc2 <- guesst(d = c(0.2, 0.5), p = c(0.6, 0.95), "logistic", 
+lgc2 <- guesst(d = c(0.2, 0.6), p = c(0.2, 0.95), "logistic", 
                local = TRUE, Maxd = 1)
+r0 <- logistic(0, 0, 1, lgc2[1], lgc2[2])
+r1 <- logistic(1, 0, 1, lgc2[1], lgc2[2])
+(logistic(c(0.2,0.6), 0, 1, lgc2[1], lgc2[2])-r0)/(r1-r0)
 ## plot models
 models <- Mods(logistic = rbind(lgc1, lgc2), doses=c(0,1))
 plot(models)
 
 ## Beta Model
-## Select one pair (d,p): (0.5,0.5)
+## Select one pair (d,p): (0.4,0.8)
 ## dose, where maximum occurs: 0.8
-bta <- guesst(d=0.5, p=0.5, model="betaMod", dMax=0.8, scal=1.2, Maxd=1)
+bta <- guesst(d=0.4, p=0.8, model="betaMod", dMax=0.8, scal=1.2, Maxd=1)
 ## plot
 models <- Mods(betaMod = bta, doses=c(0,1), addArgs = list(scal = 1.2))
 plot(models)
 
 ## Sigmoid Emax model
-## Select two (d,p) pairs (0.2, 0.5) and (0.6, 0.95)
-sgE1 <- guesst(d = c(0.2, 0.5), p = c(0.6, 0.95), "sigEmax")
+## Select two (d,p) pairs (0.2, 0.6) and (0.2, 0.95)
+sgE1 <- guesst(d = c(0.2, 0.6), p = c(0.2, 0.95), "sigEmax")
+sigEmax(c(0.2,0.6), 0, 1, sgE1[1], sgE1[2])
 ## local approach
-sgE2 <- guesst(d = c(0.2, 0.5), p = c(0.6, 0.95), "sigEmax",
+sgE2 <- guesst(d = c(0.2, 0.6), p = c(0.2, 0.95), "sigEmax",
                local = TRUE, Maxd = 1)
+sigEmax(c(0.2,0.6), 0, 1, sgE2[1], sgE2[2])/sigEmax(1, 0, 1, sgE2[1], sgE2[2])
 models <- Mods(sigEmax = rbind(sgE1, sgE2), doses=c(0,1))
 plot(models)
 
